--- a/templates/b2b-email-list.html
+++ b/templates/b2b-email-list.html
@@ -76,7 +76,7 @@
                     <p><strong style="color:#f56c0d">Avail Yours From Over 80 Million Business Executives Database</strong>- Engage in Fruitful Business Conversations with Top-Tier USA Executives like a Champion!</p>
                     <p>Tap into global markets with the right B2B sales leads</p>
                     <div class="mt-4">
-                    <a href="https://www.spanglobalservices.com/connect-with-us" data-toggle="modal" data-target="#send-message" class="white-br-btn circle-fa">Connect Now &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
+                    <a href="/connect-with-us/" data-toggle="modal" data-target="#send-message" class="white-br-btn circle-fa">Connect Now &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
                 </div>
               </div>
             </div>
@@ -94,7 +94,7 @@
               <p style="text-align:Justify;">The digital era has called for a paradigm shift in marketing’s quintessential methods. One of the most sought-after ways of new-age marketing includes B2B emailing. Wordstream’s recent survey results have revealed that the Click Through Rates (CTRs) for B2B emailing campaigns were significantly higher than any other marketing channels.</p> 
                <p style="text-align:Justify;">Besides, 59% of the top marketing professionals have voted for <strong>B2B Email Lists</strong> to be the most effective channel when the focus is on revenue generation. It is no wonder that B2B email marketing has become the cynosure of marketing approaches. However, to harness its maximum potential, employing an authentic B2B list is as crucial as it gets.</p>
 			   <p style="text-align:Justify;">Businesses are now focusing all their attention on generating useful B2B marketing leads. Why? Because sending out a <strong>Cold Email Blast</strong> to a homegrown list of contacts is not only unfulfilling but unforgivingly detrimental to your time and budget. </p>
-			   <p style="text-align:Justify;">By partnering with Span Global Services, those worries won’t be shoveling you into a corner. Our <strong>B2B Email Lists</strong> house isochronally-appended and <a href="https://www.spanglobalservices.com/data-enrichment-services" title="Enriched Data"><strong>enriched data</strong></a>.  Therefore, your business marketing strategies can hit the road to success with our pre-verified mailing lists, sans obstacles. </p>
+			   <p style="text-align:Justify;">By partnering with Span Global Services, those worries won’t be shoveling you into a corner. Our <strong>B2B Email Lists</strong> house isochronally-appended and <a href="/data-enrichment-services/" title="Enriched Data"><strong>enriched data</strong></a>.  Therefore, your business marketing strategies can hit the road to success with our pre-verified mailing lists, sans obstacles. </p>
 			   
 			   <h2 class="subhead-small-blk">Customize your B2B Mailing List by</h2>
 			   
@@ -138,8 +138,8 @@
     <div class="form">
          
 			
-		    <form name="f12" id="contact-form" action="https://www.spanglobalservices.com/scripts/formmail" method="post" onSubmit="return validationcon()" > 		
-			<input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks">
+		    <form name="f12" id="contact-form" action="/scripts/formmail" method="post" onSubmit="return validationcon()" >
+			<input type="hidden" name="returnURL" value="/thanks">
 			<input name="title" type="hidden" value="Contact Request from Span Global Services">
 
 
@@ -245,23 +245,23 @@
                                 </tr>
                                    
                                <tr>
-                                    <td><a href="https://www.spanglobalservices.com/technology-lists/">Technology Users lists</a></td>
+                                    <td><a href="/technology-lists/">Technology Users lists</a></td>
                                     <td>38,596,287</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="https://www.spanglobalservices.com/healthcare-lists/">Healthcare Email Database</a></td>
+                                    <td><a href="/healthcare-lists/">Healthcare Email Database</a></td>
                                     <td>27,705,712</td>
                                 </tr>
                                 <tr>
-                                   <td><a href="https://www.spanglobalservices.com/geo-targeted-lists/">Geo Targeted Mailing Lists</a></td>
+                                   <td><a href="/geo-targeted-lists/">Geo Targeted Mailing Lists</a></td>
                                     <td> 30,147,130</td>
                                 </tr>
 								                 <tr>
-                                   <td ><a href="https://www.spanglobalservices.com/industry-wise-lists/">Industry-wise Mailing List</a></td>
+                                   <td ><a href="/industry-wise-lists/">Industry-wise Mailing List</a></td>
                                     <td>17,068,516</td>
                                 </tr>
 								                 <tr>
-                                   <td><a href="https://www.spanglobalservices.com/professional-lists/">Professional Email Addresses</a></td>
+                                   <td><a href="/professional-lists/">Professional Email Addresses</a></td>
                                     <td>25,331,106</td>
                                 </tr>
 								
