--- a/templates/header.html
+++ b/templates/header.html
@@ -187,7 +187,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-has-children"><a href="/company-overview">Company</a>
+          <li class="menu-has-children"><a href="#">Company</a>
             <ul>
               <li><a href="/about-us/">About Us</a></li>
 
@@ -272,7 +272,7 @@
             </ul>
           </li>
 
-          <li class="menu-has-children"><a href="/data-enrichment-services">Enhance</a>
+          <li class="menu-has-children"><a href="#">Enhance</a>
             <ul>
               <li><a href="/email-appending/">Email Append</a></li>
               <li><a href="/data-appending/">Data Append</a></li>
@@ -284,7 +284,7 @@
           </li>
           
           
-          <li><a href="/contact-us#contactform" class="scrollto">Contact Us</a></li>
+          <li><a href="/contact-us/" class="scrollto">Contact Us</a></li>
 <!--          <li><a href="/datasets"><img src="/static/assets/img/Explore-Data-Card.gif" alt="Explore Data Card" title="Explore Data Card" class="respo-img"></a></li>-->
         </ul>
       </nav>
