--- a/templates/geo-targeted-lists/australia-business-email-list.html
+++ b/templates/geo-targeted-lists/australia-business-email-list.html
@@ -1,6 +1,66 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% block extra_css %}
+<style>
+    .crypto-head {
+        background-color: green;
+        color: white;
+        margin-top: 0px;
+    }
+
+    .crypto-head p {
+        color: white;
+        font-size: 16px;
+        text-align: left;
+        padding-top: 6px;
+    }
+
+    #header {
+        padding: 0px 0;
+    }
+
+    #header .crypto-head .div-hd {
+        margin-top: 6px;
+        float: left;
+        margin-left: 300px;
+    }
+
+    #header .crypto-head .div-hd img {
+        padding-left: 16px;
+    }
+
+    @media screen and (max-width:768px) {
+        #header .crypto-head .div-hd {
+            display: none;
+        }
+
+        .crypto-head p {
+            color: white;
+            font-size: 12px;
+            text-align: center;
+            padding-top: 4px;
+            margin-left: 0px;
+        }
+    }
+</style>
+{% endblock %}
+        <section class="inner-banner geotargeted-banner">
+            <div class="overlay">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 mb-3 wow fadeInLeft"></div>
+                        <div class="col-lg-6 mb-3 wow fadeInLeft">
+                            <h1>Australia Business Email List</h1>
+                            <p>Use Email Lists that are functional, flexible, reliable, cost effective and credible.</p>
+                            <div class="mt-4"> <a href="#" data-toggle="modal" data-target="#send-message"
+                                    class="white-br-btn circle-fa">Book Your Data &nbsp; <i
+                                        class="fa icon ion-android-arrow-forward"></i></a> </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     <main id="main">
         <section class="section-sec-0-0">
             <div class="container">
