--- a/templates/geo-targeted-lists/uk-business-email-list.html
+++ b/templates/geo-targeted-lists/uk-business-email-list.html
@@ -1,6 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<section class="inner-banner geotargeted-banner">
+    <div class="overlay">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 mb-3 wow fadeInLeft"></div>
+                <div class="col-lg-6 mb-3 wow fadeInLeft">
+                    <h1>Australia Business Email List</h1>
+                    <p>Use Email Lists that are functional, flexible, reliable, cost effective and credible.</p>
+                    <div class="mt-4"> <a href="#" data-toggle="modal" data-target="#send-message"
+                            class="white-br-btn circle-fa">Book Your Data &nbsp; <i
+                                class="fa icon ion-android-arrow-forward"></i></a> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <main id="main">
     <style>
         @media screen and (max-width:768px) {
