--- a/templates/healthcare-lists/hospital-email-list.html
+++ b/templates/healthcare-lists/hospital-email-list.html
@@ -1,6 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<section class="inner-banner healthcarelist-inner-banner">
+    <div class="overlay">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 mb-3 wow fadeInLeft"></div>
+                <div class="col-lg-6 mb-3 wow fadeInLeft">
+                    <h1>Accurate, Verified Dentist Email List</h1>
+                    <p><strong>Put a Smile on Dentists’ Faces with Engaging Marketing Campaigns</strong></p>
+                    <div class="mt-4"> <a href="#" data-toggle="modal" data-target="#send-message"
+                            class="white-br-btn circle-fa">Book Your Data &nbsp; <i
+                                class="fa icon ion-android-arrow-forward"></i></a> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <main id="main">
     <section class="section-sec-0-40">
         <div class="container">
@@ -386,7 +402,8 @@
                                     </p>
                                     <p><img src="https://www.spanglobalservices.com/assets/img/job-title2.png"
                                             alt="job-title" title="job-title" class="respo-img">&nbsp;Job Title</p>
-                                </a> </div>
+                                </a>
+                            </div>
                             <div class="col-lg-4 wow fadeInLeft"
                                 style="visibility: visible; animation-name: fadeInLeft;padding-right: 0px;padding-left: 0px;">
                                 <a href="#requestquote">
@@ -400,7 +417,8 @@
                                     <p><img src="https://www.spanglobalservices.com/assets/img/company-mailng.png"
                                             alt="company-mailng" title="company-mailng" class="respo-img">&nbsp;Mailng
                                         Address</p>
-                                </a> </div>
+                                </a>
+                            </div>
                             <div class="col-lg-4 wow fadeInLeft"
                                 style="visibility: visible; animation-name: fadeInLeft;padding-right: 0px;padding-left: 0px;">
                                 <a href="#requestquote">
@@ -414,7 +432,8 @@
                                     <p><img src="https://www.spanglobalservices.com/assets/img/Socialmedia-handling.png"
                                             alt="Socialmedia-handling" title="Socialmedia-handling"
                                             class="respo-img">&nbsp;Social Media Handles</p>
-                                </a> </div>
+                                </a>
+                            </div>
                         </div>
                         <div class="row mobile-tableview">
                             <div class="col-lg-12 wow fadeInLeft">
@@ -470,7 +489,8 @@
                         <strong>Hospital Email Address List</strong> is the right tool for you. With verified data you
                         will connect with targeted medical specialists and establish seamless communication with them.
                         Our healthcare email lists are one stop shop for all your hospital data needs. So, if you are
-                        looking to reach out to various hospitals then Span Global Services is the place for you.</p>
+                        looking to reach out to various hospitals then Span Global Services is the place for you.
+                    </p>
                     <p style="text-align:Justify;">Do not waste time thinking. Invest in our <strong>Hospital Contact
                             List</strong> to increase visibility of your medical offerings to the right hospital
                         decision makers and improve audience engagement.</p>
@@ -486,7 +506,7 @@
                     </div>
                 </div>
                 <div class="col-lg-7 mt-4 wow fadeInLeft mb-sec">
-                    <p style="text-align:Justify; mb-sec">The well segmented <strong>Hospitals Email Lists</strong> is
+                    <p style="text-align:justify;">The well segmented <strong>Hospitals Email Lists</strong> is
                         categorized into name, email id, mailing address, and years of experience, specialty, geographic
                         location, and much more. Marketers can avail our <a
                             href="https://www.spanglobalservices.com/data-append/email-appending"
