--- a/templates/healthcare-lists/nurses-email-list.html
+++ b/templates/healthcare-lists/nurses-email-list.html
@@ -1,7 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <main id="main">
+<section class="inner-banner healthcarelist-inner-banner">
+    <div class="overlay">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 mb-3 wow fadeInLeft"></div>
+                <div class="col-lg-6 mb-3 wow fadeInLeft">
+                    <h1>Accurate, Verified Dentist Email List</h1>
+                    <p><strong>Put a Smile on Dentists’ Faces with Engaging Marketing Campaigns</strong></p>
+                    <div class="mt-4"> <a href="#" data-toggle="modal" data-target="#send-message"
+                            class="white-br-btn circle-fa">Book Your Data &nbsp; <i
+                                class="fa icon ion-android-arrow-forward"></i></a> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<main id="main">
     <section class="section-sec-0-60" style="padding: 0px 0 20px 0;">
         <div class="container">
             <div class="row">
@@ -33,7 +49,8 @@
                         verified data, we at Span Global Services go the extra mile to maintain highest quality of our
                         exhaustive and segmented healthcare lists. A dedicated team of researchers have compiled the
                         <strong>Nurses Email Database</strong> from legitimate sources. Therefore, marketers get access
-                        to verified data that can maximize campaign success.</p>
+                        to verified data that can maximize campaign success.
+                    </p>
                     <h2 class="subhead-small-blk">Customize your to Nurses Mailing List by</h2>
                     <div class="row respo-icon">
                         <div class="col-lg-2 wow fadeInLeft text-center"
@@ -783,6 +800,6 @@
             </div>
         </div>
     </section>
-    </main>
+</main>
 
 {% endblock %}
