--- a/templates/professionel-lists/ceo-email-list.html
+++ b/templates/professionel-lists/ceo-email-list.html
@@ -1,6 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<section class="inner-banner professional-list-banner">
+    <div class="overlay">
+    	<div class="container">
+            <div class="row">
+              <div class="col-lg-6 mb-3 wow fadeInLeft"></div>
+              <div class="col-lg-6 mb-3 wow fadeInLeft">
+                    <h1>Attorney Email List</h1>
+                    <p>Supercharge Your Marketing Campaigns with the Power of Right Data</p>
+                    <div class="mt-4">
+                    <a href="#" data-toggle="modal" data-target="#send-message" class="white-br-btn circle-fa">Book Your Data &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
+                    <h5 class="mt-5 text-white h6"><strong>Last Updated : June 18, 2023</strong></h5>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>	
+</section>
     <main id="main">
         <section class="section-sec-0-60" style="padding: 0px 0 10px 0;">
             <div class="container">
