--- a/templates/technology-lists/crm-users-list.html
+++ b/templates/technology-lists/crm-users-list.html
@@ -1,7 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<section class="inner-banner technologylist-banner">
+  <div class="overlay">
+    <div class="container">
+          <div class="row">
+            <div class="col-lg-7 mb-3 wow fadeInLeft">
+                  <h1>Give Flight to Your Marketing Aspirations with AWS Customers List</h1>
+                  <p><strong>Maximum Business Potential with Verified Database and Contact Lists</strong></p>
+                  <div class="mt-4">
+                  <a href="#" data-toggle="modal" data-target="#send-message" class="white-br-btn circle-fa">Book Your Data &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
+                  <h5 class="mt-5 text-white h6"><strong>Last Updated : June 18, 2023</strong></h5>
+              </div>
+            </div>
+            <div class="col-lg-5 mb-3 wow fadeInLeft"></div>
+          </div>
+      </div>
+  </div>	
+</section>
   <main id="main">
   
  
